--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
 			</div>
 		</header>
 		<main>
-			<section class="section section-one">
+			<section class="section section-one overlay">
 				<div class="container">
 					<h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
 					<button type="button" class="button">Замовити послугу</button>
 				</div>
 			</section>
-
 			<section class="section section-features">
 				<div class="container">
 					<h2 class="visually-hidden">переваги</h2>
