--- a/index.html
+++ b/index.html
@@ -30,8 +30,22 @@
 					</ul>
 				</nav>
 				<ul class="mail-tel">
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li>
+						<a class="mail-link" href="mailto:info@devstudio.com">
+							<svg>
+								<use href="./images/symbol-defs1.svg#icon-group-4"></use>
+							</svg>
+							info@devstudio.com
+						</a>
+					</li>
+					<li>
+						<a class="tel-link" href="tel:+380961111111">
+							<svg>
+								<use href="./images/symbol-defs1.svg#icon-group-4"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -231,42 +245,42 @@
 						<ul class="clients">
 							<li>
 								<button class="button-clients">
-									<svg class="icon-client" width="41"; height="46.7">
+									<svg class="icon-client" width="40" height="52">
 										<use href="./images/symbol-defs1.svg#icon-group"></use>
 									</svg>
 								</button>
 							</li>
 							<li>
 								<button class="button-clients">
-									<svg width="40"; height="52">
+									<svg class="icon-client" width="40" height="52">
 										<use href="./images/symbol-defs1.svg#icon-group-1"></use>
 									</svg>
 								</button>
 							</li>
 							<li>
 								<button class="button-clients">
-									<svg width="43.46"; height="41.18">
+									<svg class="icon-client" width="43.46" height="41.18">
 										<use href="./images/symbol-defs1.svg#icon-group-2"></use>
 									</svg>
 								</button>
 							</li>
 							<li>
 								<button class="button-clients">
-									<svg width="84.44"; height="40.62">
+									<svg class="icon-client" width="84.44" height="40.62">
 										<use href="./images/symbol-defs1.svg#icon-group-3"></use>
 									</svg>
 								</button>
 							</li>
 							<li>
 								<button class="button-clients">
-									<svg width="62.54"; height="45.43">
+									<svg class="icon-client" width="62.54" height="45.43">
 										<use href="./images/symbol-defs1.svg#icon-group-4"></use>
 									</svg>
 								</button>
 							</li>
 							<li>
 								<button class="button-clients">
-									<svg width="93.79"; height="43.93">
+									<svg class="icon-client" width="93.79" ; height="43.93">
 										<use href="./images/symbol-defs1.svg#icon-group-5"></use>
 									</svg>
 								</button>
@@ -278,22 +292,49 @@
 		</main>
 
 		<footer>
-			<div class="container">
-				<a href="./index.html" class="logo">
-					Web
-					<span class="logo-white">Studio</span>
-				</a>
-				<address class="footer-address">
-					<ul>
-						<li>
-							<a href="https://goo.gl/maps/BtjrB1jNea8zQYT58" target="_blank" rel="noopener nofollow" class="address">
-								м. Київ, пр-т Лесі Українки, 26
-							</a>
-						</li>
-						<li><a href="mailto:info@devstudio.com" class="mail-tel-footer">info@devstudio.com</a></li>
-						<li><a href="tel:+380961111111" class="mail-tel-footer">+38 096 111 11 11</a></li>
-					</ul>
-				</address>
+			<div class="container footer-flex">
+				<div class="footer-address">
+					<a href="./index.html" class="logo">
+						Web
+						<span class="logo-white">Studio</span>
+					</a>
+					<address class="footer-address">
+						<ul>
+							<li>
+								<a href="https://goo.gl/maps/BtjrB1jNea8zQYT58" target="_blank" rel="noopener nofollow" class="address">
+									м. Київ, пр-т Лесі Українки, 26
+								</a>
+							</li>
+							<li><a href="mailto:info@devstudio.com" class="mail-tel-footer">info@devstudio.com</a></li>
+							<li><a href="tel:+380961111111" class="mail-tel-footer">+38 096 111 11 11</a></li>
+						</ul>
+					</address>
+				</div>
+				<div class="footer-contact-us">
+					<h3>приєднуйтесь</h3>
+					<div class="icon-list">
+						<button class="button-icon">
+							<svg class="icon">
+								<use href="./images/symbol-defs.svg#icon-instagram"></use>
+							</svg>
+						</button>
+						<button class="button-icon">
+							<svg class="icon">
+								<use href="./images/symbol-defs.svg#icon-twitter"></use>
+							</svg>
+						</button>
+						<button class="button-icon">
+							<svg class="icon">
+								<use href="./images/symbol-defs.svg#icon-facebook"></use>
+							</svg>
+						</button>
+						<button class="button-icon">
+							<svg class="icon">
+								<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+							</svg>
+						</button>
+					</div>
+				</div>
 			</div>
 		</footer>
 	</body>
