--- a/index.html
+++ b/index.html
@@ -62,29 +62,29 @@
 
 					<ul class="features-list">
 						<li class="features-img">
-							<svg>
-								<use href="./images/symbol-defs2.svg#icon-antenna"></use>
+							<svg class="antena">
+								<use width="65.32" height="70" href="./images/symbol-defs4.svg#icon-antena1"></use>
 							</svg>
 							<h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
 							<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 						</li>
 						<li class="features-img">
 							<svg>
-								<use href="./images/symbol-defs2.svg#icon-clock"></use>
+								<use width="66.96" height="70" href="./images/symbol-defs4.svg#icon-clock-1"></use>
 							</svg>
 							<h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
 							<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 						</li>
 						<li class="features-img">
 							<svg>
-								<use href="./images/symbol-defs2.svg#icon-diagram"></use>
+								<use width="70" height="53.69" href="./images/symbol-defs4.svg#icon-diagram1"></use>
 							</svg>
 							<h3 class="title">ПЛАНУВАННЯ</h3>
 							<p>Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
 						<li class="features-img">
-							<svg>
-								<use href="./images/symbol-defs2.svg#icon-astronaut"></use>
+							<svg width="40" height="100">
+								<use width="70" height="70" href="./images/symbol-defs4.svg#icon-astronaut1"></use>
 							</svg>
 							<h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 							<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
@@ -119,31 +119,39 @@
 							<div class="under-photo">
 								<h3 class="title">Ігор Дем'яненко</h3>
 								<p>Product Designer</p>
-								<div class="icon-list">
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-instagram"></use>
-										</svg>
-									</button>
+								<ul class="icon-list">
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-twitter"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-facebook"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
-										</svg>
-									</button>
-								</div>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-li">
@@ -152,29 +160,40 @@
 								<h3 class="title">Ольга Рєпіна</h3>
 								<p>Frontend Developer</p>
 								<div class="icon-list">
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-instagram"></use>
-										</svg>
-									</button>
+								<ul class="icon-list">
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-twitter"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-facebook"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
+
 								</div>
 							</div>
 						</li>
@@ -184,29 +203,39 @@
 								<h3 class="title">Микола Тарасов</h3>
 								<p>Marketing</p>
 								<div class="icon-list">
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-instagram"></use>
-										</svg>
-									</button>
+									<ul class="icon-list">
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-twitter"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-facebook"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 								</div>
 							</div>
 						</li>
@@ -216,29 +245,39 @@
 								<h3 class="title">Михайло Єрмаков</h3>
 								<p>UI Designer</p>
 								<div class="icon-list">
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-instagram"></use>
-										</svg>
-									</button>
+									<ul class="icon-list">
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-twitter"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use href="./images/symbol-defs.svg#icon-facebook"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
 
-									<button class="button-icon">
-										<svg class="icon">
-											<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
-										</svg>
-									</button>
+									<li>
+										<a class="" href="">
+											<svg class="icon button-icon">
+												<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 								</div>
 							</div>
 						</li>
@@ -251,47 +290,47 @@
 					<h2 class="section-title">Постійні клієнти</h2>
 					<div class="our-clients">
 						<ul class="clients">
-							<li>
-								<button class="button-clients">
+							<li class="button-clients">
+								<a >
 									<svg class="icon-client" width="40" height="52">
 										<use href="./images/symbol-defs1.svg#icon-group"></use>
 									</svg>
-								</button>
+								</a>
 							</li>
-							<li>
-								<button class="button-clients">
+							<li class="button-clients">
+								<a>
 									<svg class="icon-client" width="40" height="52">
 										<use href="./images/symbol-defs1.svg#icon-group-1"></use>
 									</svg>
-								</button>
+								</a>
 							</li>
-							<li>
-								<button class="button-clients">
+							<li class="button-clients">
+								<a>
 									<svg class="icon-client" width="43.46" height="41.18">
 										<use href="./images/symbol-defs1.svg#icon-group-2"></use>
 									</svg>
-								</button>
+								</a>
 							</li>
-							<li>
-								<button class="button-clients">
+							<li class="button-clients">
+								<a class="icon-client">
 									<svg class="icon-client" width="84.44" height="40.62">
 										<use href="./images/symbol-defs1.svg#icon-group-3"></use>
 									</svg>
-								</button>
+								</a>
 							</li>
-							<li>
-								<button class="button-clients">
+							<li class="button-clients">
+								<a>
 									<svg class="icon-client" width="62.54" height="45.43">
 										<use href="./images/symbol-defs1.svg#icon-group-4"></use>
 									</svg>
-								</button>
+								</a>
 							</li>
-							<li>
-								<button class="button-clients">
+							<li class="button-clients">
+								<a>
 									<svg class="icon-client" width="93.79" ; height="43.93">
 										<use href="./images/symbol-defs1.svg#icon-group-5"></use>
 									</svg>
-								</button>
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -320,28 +359,39 @@
 				</div>
 				<div class="footer-contact-us">
 					<h3 class="join">приєднуйтесь</h3>
-					<div class="icon-list">
-						<button class="button-icon">
-							<svg class="icon">
-								<use href="./images/symbol-defs.svg#icon-instagram"></use>
+					<ul class="icon-list">
+						<li>
+						<a class="footer-use" href="">
+							<svg class="icon button-icon">
+								<use class="" href="./images/symbol-defs.svg#icon-instagram"></use>
 							</svg>
-						</button>
-						<button class="button-icon">
-							<svg class="icon">
+						</a>
+						</li>
+
+						<li>
+						<a class="" href="">
+							<svg class="icon button-icon">
 								<use href="./images/symbol-defs.svg#icon-twitter"></use>
 							</svg>
-						</button>
-						<button class="button-icon">
-							<svg class="icon">
+						</a>
+						</li>
+
+						<li>
+						<a class="" href="">
+							<svg class="icon button-icon">
 								<use href="./images/symbol-defs.svg#icon-facebook"></use>
 							</svg>
-						</button>
-						<button class="button-icon">
-							<svg class="icon">
+						</a>
+						</li>
+
+						<li>
+						<a class="" href="">
+							<svg class="icon button-icon">
 								<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
 							</svg>
-						</button>
-					</div>
+						</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</footer>
