--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,22 @@
 					</ul>
 				</nav>
 				<ul class="mail-tel">
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li>
+						<a class="mail-link" href="mailto:info@devstudio.com">
+							<svg>
+								<use href="./images/symbol-defs3.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com
+						</a>
+					</li>
+					<li>
+						<a class="tel-link" href="tel:+380961111111">
+							<svg>
+								<use href="./images/symbol-defs3.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -155,30 +169,42 @@
 				</div>
 				<div class="footer-contact-us">
 					<h3 class="join">приєднуйтесь</h3>
-					<div class="icon-list">
-						<button class="button-icon">
-							<svg class="icon">
-								<use href="./images/symbol-defs.svg#icon-instagram"></use>
+					<ul class="icon-list">
+						<li>
+						<a class="footer-use" href="">
+							<svg class="icon button-icon">
+								<use class="" href="./images/symbol-defs.svg#icon-instagram"></use>
 							</svg>
-						</button>
-						<button class="button-icon">
-							<svg class="icon">
+						</a>
+						</li>
+
+						<li>
+						<a class="" href="">
+							<svg class="icon button-icon">
 								<use href="./images/symbol-defs.svg#icon-twitter"></use>
 							</svg>
-						</button>
-						<button class="button-icon">
-							<svg class="icon">
+						</a>
+						</li>
+
+						<li>
+						<a class="" href="">
+							<svg class="icon button-icon">
 								<use href="./images/symbol-defs.svg#icon-facebook"></use>
 							</svg>
-						</button>
-						<button class="button-icon">
-							<svg class="icon">
+						</a>
+						</li>
+
+						<li>
+						<a class="" href="">
+							<svg class="icon button-icon">
 								<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
 							</svg>
-						</button>
-					</div>
+						</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</footer>
 	</body>
 </html>
+
