--- a/index.html
+++ b/index.html
@@ -61,31 +61,39 @@
 					<h2 class="visually-hidden">переваги</h2>
 
 					<ul class="features-list">
-						<li class="features-img">
-							<svg class="antena">
-								<use width="65.32" height="70" href="./images/symbol-defs4.svg#icon-antena1"></use>
-							</svg>
+						<li class="">
+							<div class="features-img">
+								<svg width="70" height="70">
+									<use href="./images/symbol-defs4.svg#icon-antena1"></use>
+								</svg>
+							</div>
 							<h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
 							<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 						</li>
-						<li class="features-img">
-							<svg>
-								<use width="66.96" height="70" href="./images/symbol-defs4.svg#icon-clock-1"></use>
-							</svg>
+						<li class="">
+							<div class="features-img">
+								<svg width="70" height="70">
+									<use href="./images/symbol-defs4.svg#icon-clock-1"></use>
+								</svg>
+							</div>
 							<h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
 							<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 						</li>
-						<li class="features-img">
-							<svg>
-								<use width="70" height="53.69" href="./images/symbol-defs4.svg#icon-diagram1"></use>
-							</svg>
+						<li class="">
+							<div class="features-img">
+								<svg width="70" height="70">
+									<use href="./images/symbol-defs4.svg#icon-diagram1"></use>
+								</svg>
+							</div>
 							<h3 class="title">ПЛАНУВАННЯ</h3>
 							<p>Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
-						<li class="features-img">
-							<svg width="40" height="100">
-								<use width="70" height="70" href="./images/symbol-defs4.svg#icon-astronaut1"></use>
-							</svg>
+						<li class="">
+							<div class="features-img">
+								<svg width="70" height="70">
+									<use href="./images/symbol-defs4.svg#icon-astronaut1"></use>
+								</svg>
+							</div>
 							<h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 							<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 						</li>
@@ -121,33 +129,33 @@
 								<p>Product Designer</p>
 								<ul class="icon-list">
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
 											</svg>
 										</a>
 									</li>
@@ -160,40 +168,39 @@
 								<h3 class="title">Ольга Рєпіна</h3>
 								<p>Frontend Developer</p>
 								<div class="icon-list">
-								<ul class="icon-list">
+									<ul class="icon-list">
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
 											</svg>
 										</a>
 									</li>
 								</ul>
-
 								</div>
 							</div>
 						</li>
@@ -205,33 +212,33 @@
 								<div class="icon-list">
 									<ul class="icon-list">
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
 											</svg>
 										</a>
 									</li>
@@ -247,33 +254,33 @@
 								<div class="icon-list">
 									<ul class="icon-list">
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-instagram"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-twitter"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use href="./images/symbol-defs.svg#icon-facebook"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
 											</svg>
 										</a>
 									</li>
 
 									<li>
-										<a class="" href="">
-											<svg class="icon button-icon">
-												<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
+										<a class="button-icon">
+											<svg class="icon">
+												<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
 											</svg>
 										</a>
 									</li>
@@ -287,53 +294,52 @@
 
 			<section class="section section-features">
 				<div class="container">
-					<h2 class="section-title">Постійні клієнти</h2>
-					<div class="our-clients">
-						<ul class="clients">
-							<li class="button-clients">
-								<a >
-									<svg class="icon-client" width="40" height="52">
-										<use href="./images/symbol-defs1.svg#icon-group"></use>
-									</svg>
-								</a>
-							</li>
-							<li class="button-clients">
-								<a>
-									<svg class="icon-client" width="40" height="52">
-										<use href="./images/symbol-defs1.svg#icon-group-1"></use>
-									</svg>
-								</a>
-							</li>
-							<li class="button-clients">
-								<a>
-									<svg class="icon-client" width="43.46" height="41.18">
-										<use href="./images/symbol-defs1.svg#icon-group-2"></use>
-									</svg>
-								</a>
-							</li>
-							<li class="button-clients">
-								<a class="icon-client">
-									<svg class="icon-client" width="84.44" height="40.62">
-										<use href="./images/symbol-defs1.svg#icon-group-3"></use>
-									</svg>
-								</a>
-							</li>
-							<li class="button-clients">
-								<a>
-									<svg class="icon-client" width="62.54" height="45.43">
-										<use href="./images/symbol-defs1.svg#icon-group-4"></use>
-									</svg>
-								</a>
-							</li>
-							<li class="button-clients">
-								<a>
-									<svg class="icon-client" width="93.79" ; height="43.93">
-										<use href="./images/symbol-defs1.svg#icon-group-5"></use>
-									</svg>
-								</a>
-							</li>
-						</ul>
-					</div>
+					<h2 class="section-title customer">Постійні клієнти</h2>
+
+					<ul class="clients">
+						<li class="button-clients">
+							<a>
+								<svg class="icon-client" width="40" height="52">
+									<use href="./images/symbol-defs1.svg#icon-group"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="button-clients">
+							<a>
+								<svg class="icon-client" width="40" height="52">
+									<use href="./images/symbol-defs1.svg#icon-group-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="button-clients">
+							<a>
+								<svg class="icon-client" width="43.46" height="41.18">
+									<use href="./images/symbol-defs1.svg#icon-group-2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="button-clients">
+							<a class="icon-client">
+								<svg class="icon-client" width="84.44" height="40.62">
+									<use href="./images/symbol-defs1.svg#icon-group-3"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="button-clients">
+							<a>
+								<svg class="icon-client" width="62.54" height="45.43">
+									<use href="./images/symbol-defs1.svg#icon-group-4"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="button-clients">
+							<a>
+								<svg class="icon-client" width="93.79" ; height="43.93">
+									<use href="./images/symbol-defs1.svg#icon-group-5"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</section>
 		</main>
@@ -361,35 +367,35 @@
 					<h3 class="join">приєднуйтесь</h3>
 					<ul class="icon-list">
 						<li>
-						<a class="footer-use" href="">
-							<svg class="icon button-icon">
-								<use class="" href="./images/symbol-defs.svg#icon-instagram"></use>
-							</svg>
-						</a>
+							<a class="button-icon">
+								<svg class="icon">
+									<use class="" href="./images/symbol-defs2.svg#icon-instagram-2"></use>
+								</svg>
+							</a>
 						</li>
 
 						<li>
-						<a class="" href="">
-							<svg class="icon button-icon">
-								<use href="./images/symbol-defs.svg#icon-twitter"></use>
-							</svg>
-						</a>
+							<a class="button-icon">
+								<svg class="icon">
+									<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
+								</svg>
+							</a>
 						</li>
 
 						<li>
-						<a class="" href="">
-							<svg class="icon button-icon">
-								<use href="./images/symbol-defs.svg#icon-facebook"></use>
-							</svg>
-						</a>
+							<a class="button-icon">
+								<svg class="icon">
+									<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
+								</svg>
+							</a>
 						</li>
 
 						<li>
-						<a class="" href="">
-							<svg class="icon button-icon">
-								<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
-							</svg>
-						</a>
+							<a class="button-icon">
+								<svg class="icon">
+									<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
