--- a/index.html
+++ b/index.html
@@ -169,38 +169,38 @@
 								<p>Frontend Developer</p>
 								<div class="icon-list">
 									<ul class="icon-list">
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
-											</svg>
-										</a>
-									</li>
-								</ul>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+												</svg>
+											</a>
+										</li>
+									</ul>
 								</div>
 							</div>
 						</li>
@@ -211,38 +211,38 @@
 								<p>Marketing</p>
 								<div class="icon-list">
 									<ul class="icon-list">
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
-											</svg>
-										</a>
-									</li>
-								</ul>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+												</svg>
+											</a>
+										</li>
+									</ul>
 								</div>
 							</div>
 						</li>
@@ -253,38 +253,38 @@
 								<p>UI Designer</p>
 								<div class="icon-list">
 									<ul class="icon-list">
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
-											</svg>
-										</a>
-									</li>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
+												</svg>
+											</a>
+										</li>
 
-									<li>
-										<a class="button-icon">
-											<svg class="icon">
-												<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
-											</svg>
-										</a>
-									</li>
-								</ul>
+										<li>
+											<a class="button-icon">
+												<svg class="icon">
+													<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+												</svg>
+											</a>
+										</li>
+									</ul>
 								</div>
 							</div>
 						</li>
@@ -297,44 +297,44 @@
 					<h2 class="section-title customer">Постійні клієнти</h2>
 
 					<ul class="clients">
-						<li class="button-clients">
-							<a>
-								<svg class="icon-client" width="40" height="52">
+						<li>
+							<a class="button-clients">
+								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="button-clients">
-							<a>
-								<svg class="icon-client" width="40" height="52">
+						<li>
+							<a class="button-clients">
+								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-1"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="button-clients">
-							<a>
-								<svg class="icon-client" width="43.46" height="41.18">
+						<li>
+							<a class="button-clients">
+								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-2"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="button-clients">
-							<a class="icon-client">
-								<svg class="icon-client" width="84.44" height="40.62">
+						<li>
+							<a class="button-clients" class="icon-client">
+								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-3"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="button-clients">
-							<a>
-								<svg class="icon-client" width="62.54" height="45.43">
+						<li>
+							<a class="button-clients">
+								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-4"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="button-clients">
-							<a>
-								<svg class="icon-client" width="93.79" ; height="43.93">
+						<li>
+							<a class="button-clients">
+								<svg class="icon-client" width="106" ; height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-5"></use>
 								</svg>
 							</a>
@@ -364,7 +364,7 @@
 					</address>
 				</div>
 				<div class="footer-contact-us">
-					<h3 class="join">приєднуйтесь</h3>
+					<p class="join">приєднуйтесь</p>
 					<ul class="icon-list">
 						<li>
 							<a class="button-icon">
