--- a/portfolio.html
+++ b/portfolio.html
@@ -168,38 +168,38 @@
 					</address>
 				</div>
 				<div class="footer-contact-us">
-					<h3 class="join">приєднуйтесь</h3>
+					<p class="join">приєднуйтесь</p>
 					<ul class="icon-list">
 						<li>
-						<a class="footer-use" href="">
-							<svg class="icon button-icon">
-								<use class="" href="./images/symbol-defs.svg#icon-instagram"></use>
-							</svg>
-						</a>
+							<a class="button-icon">
+								<svg class="icon">
+									<use class="" href="./images/symbol-defs2.svg#icon-instagram-2"></use>
+								</svg>
+							</a>
 						</li>
 
 						<li>
-						<a class="" href="">
-							<svg class="icon button-icon">
-								<use href="./images/symbol-defs.svg#icon-twitter"></use>
-							</svg>
-						</a>
+							<a class="button-icon">
+								<svg class="icon">
+									<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
+								</svg>
+							</a>
 						</li>
 
 						<li>
-						<a class="" href="">
-							<svg class="icon button-icon">
-								<use href="./images/symbol-defs.svg#icon-facebook"></use>
-							</svg>
-						</a>
+							<a class="button-icon">
+								<svg class="icon">
+									<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
+								</svg>
+							</a>
 						</li>
 
 						<li>
-						<a class="" href="">
-							<svg class="icon button-icon">
-								<use class="button-icon" href="./images/symbol-defs.svg#icon-linkedin"></use>
-							</svg>
-						</a>
+							<a class="button-icon">
+								<svg class="icon">
+									<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
