--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								<p>Product Designer</p>
 								<ul class="icon-list">
 									<li>
-										<a class="button-icon">
+										<a class="button-icon" href="#">
 											<svg class="icon">
 												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
 											</svg>
@@ -137,7 +137,7 @@
 									</li>
 
 									<li>
-										<a class="button-icon">
+										<a class="button-icon" href="#">
 											<svg class="icon">
 												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
 											</svg>
@@ -145,7 +145,7 @@
 									</li>
 
 									<li>
-										<a class="button-icon">
+										<a class="button-icon" href="#">
 											<svg class="icon">
 												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
 											</svg>
@@ -153,9 +153,9 @@
 									</li>
 
 									<li>
-										<a class="button-icon">
+										<a class="button-icon" href="#">
 											<svg class="icon">
-												<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+												<use href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
 											</svg>
 										</a>
 									</li>
@@ -167,40 +167,40 @@
 							<div class="under-photo">
 								<h3 class="title">Ольга Рєпіна</h3>
 								<p>Frontend Developer</p>
-								<div class="icon-list">
+								<div class="">
 									<ul class="icon-list">
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
-												</svg>
-											</a>
-										</li>
-									</ul>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 								</div>
 							</div>
 						</li>
@@ -209,40 +209,40 @@
 							<div class="under-photo">
 								<h3 class="title">Микола Тарасов</h3>
 								<p>Marketing</p>
-								<div class="icon-list">
+								<div class="">
 									<ul class="icon-list">
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
-												</svg>
-											</a>
-										</li>
-									</ul>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 								</div>
 							</div>
 						</li>
@@ -251,40 +251,40 @@
 							<div class="under-photo">
 								<h3 class="title">Михайло Єрмаков</h3>
 								<p>UI Designer</p>
-								<div class="icon-list">
+								<div class="">
 									<ul class="icon-list">
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
-												</svg>
-											</a>
-										</li>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
 
-										<li>
-											<a class="button-icon">
-												<svg class="icon">
-													<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
-												</svg>
-											</a>
-										</li>
-									</ul>
+									<li>
+										<a class="button-icon" href="#">
+											<svg class="icon">
+												<use href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 								</div>
 							</div>
 						</li>
@@ -298,42 +298,42 @@
 
 					<ul class="clients">
 						<li>
-							<a class="button-clients">
+							<a class="button-clients" href="#">
 								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group"></use>
 								</svg>
 							</a>
 						</li>
 						<li>
-							<a class="button-clients">
+							<a class="button-clients" href="#">
 								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-1"></use>
 								</svg>
 							</a>
 						</li>
 						<li>
-							<a class="button-clients">
+							<a class="button-clients" href="#">
 								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-2"></use>
 								</svg>
 							</a>
 						</li>
 						<li>
-							<a class="button-clients" class="icon-client">
+							<a class="button-clients" href="#">
 								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-3"></use>
 								</svg>
 							</a>
 						</li>
 						<li>
-							<a class="button-clients">
+							<a class="button-clients" href="#">
 								<svg class="icon-client" width="106" height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-4"></use>
 								</svg>
 							</a>
 						</li>
 						<li>
-							<a class="button-clients">
+							<a class="button-clients" href="#">
 								<svg class="icon-client" width="106" ; height="60">
 									<use href="./images/symbol-defs1.svg#icon-group-5"></use>
 								</svg>
@@ -365,9 +365,9 @@
 				</div>
 				<div class="footer-contact-us">
 					<p class="join">приєднуйтесь</p>
-					<ul class="icon-list">
+					<ul class="icon-list-1">
 						<li>
-							<a class="button-icon">
+							<a class="button-icon" href="#">
 								<svg class="icon">
 									<use class="" href="./images/symbol-defs2.svg#icon-instagram-2"></use>
 								</svg>
@@ -375,7 +375,7 @@
 						</li>
 
 						<li>
-							<a class="button-icon">
+							<a class="button-icon" href="#">
 								<svg class="icon">
 									<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
 								</svg>
@@ -383,7 +383,7 @@
 						</li>
 
 						<li>
-							<a class="button-icon">
+							<a class="button-icon" href="#">
 								<svg class="icon">
 									<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
 								</svg>
@@ -391,7 +391,7 @@
 						</li>
 
 						<li>
-							<a class="button-icon">
+							<a class="button-icon" href="#">
 								<svg class="icon">
 									<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
 								</svg>
