--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
 					</ul>
 					<ul class="portfolio-list">
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img1.jpg" alt="три фотографии" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Технокряк</h2>
@@ -71,7 +71,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img2.jpg" alt="два баскитболиста с мячем" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
@@ -80,7 +80,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img3.jpg" alt="надпись нп фоне картинки рыбы" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -89,7 +89,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img4.jpg" alt="наушники" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Проєкт Prime</h2>
@@ -98,7 +98,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img5.jpg" alt="белая и коричневая коробочки" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Проєкт Boxes</h2>
@@ -107,7 +107,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img6.jpg" alt="монитор" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -116,7 +116,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img7.jpg" alt="раскрытый журнал" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Видання Limited Edition</h2>
@@ -125,7 +125,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img8.jpg" alt="стикер с надписью" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Проєкт LAB</h2>
@@ -134,7 +134,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="">
+							<a class="portfolio-list-1" href="">
 								<img src="./images/img9.jpg" alt="ноутбук и руки мужчины на клавиатуре" width="370" />
 								<div class="under-photo-portfolio">
 									<h2 class="portfolio-title">Growing Business</h2>
@@ -169,9 +169,9 @@
 				</div>
 				<div class="footer-contact-us">
 					<p class="join">приєднуйтесь</p>
-					<ul class="icon-list">
+					<ul class="icon-list-1">
 						<li>
-							<a class="button-icon">
+							<a class="button-icon" href="#">
 								<svg class="icon">
 									<use class="" href="./images/symbol-defs2.svg#icon-instagram-2"></use>
 								</svg>
@@ -179,7 +179,7 @@
 						</li>
 
 						<li>
-							<a class="button-icon">
+							<a class="button-icon" href="#">
 								<svg class="icon">
 									<use href="./images/symbol-defs2.svg#icon-twitter-1"></use>
 								</svg>
@@ -187,7 +187,7 @@
 						</li>
 
 						<li>
-							<a class="button-icon">
+							<a class="button-icon" href="#">
 								<svg class="icon">
 									<use href="./images/symbol-defs2.svg#icon-facebook-1"></use>
 								</svg>
@@ -195,7 +195,7 @@
 						</li>
 
 						<li>
-							<a class="button-icon">
+							<a class="button-icon" href="#">
 								<svg class="icon">
 									<use class="button-icon" href="./images/symbol-defs2.svg#icon-linkedin-1"></use>
 								</svg>
